# vanguard-aleo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: dev.yml
aleo2json/src/: main.rs  main0.rs
tests/: aleo2json-test.ipynb  aleoswap06.aleo  environment-test.ipynb  lexer-test.aleo  lexer-test.ipynb  parser-test.ipynb  test.json  test0.aleo  test0.ipynb  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb
tests/divrd0/: README.md
tests/divrd0/inputs/: divrd0.in
tests/divrd0/src/: main.leo
tests/divz0/: README.md  program.json
tests/divz0/inputs/: divz0.in
tests/divz0/src/: main.leo
tests/downcast0/: README.md
tests/explorer/: aleo_monopoly_workshop8.aleo  alo_xxxxx_alo_v8.aleo  bestprj_qqqq_v5.aleo  closefivedeal.aleo  computing_power_klass_v2.aleo  credits.aleo  dvijok_vsix_seven.aleo  farnationallook.aleo  fatherbackcatch.aleo  finalize_fail_testing_1.aleo  gijduvan_samsa.aleo  hello_my_friend_tech.aleo  hurrem_kozgoogli.aleo  infinity_jjj_nine.aleo  issuer_verifier_zpass_test1.aleo  llll_pppp_aleo_v4.aleo  lspd_los_santos_v2.aleo  michaelander_v0.aleo  positiveheavyitself.aleo  radio_joystick_v1.aleo  ranasdasgo_player.aleo  randgen_4_player.aleo  raqqqz_dancer_v0.aleo  tos_electonik_v0.aleo  vvvzkmaleoaleo_v10.aleo  xxxx_aleo_vvvv_v6.aleo
tests/infoleak0/: README.md
tests/overflow0/: README.md  program.json
tests/scripts/: dep.py  parsing.py  test-divz.py  test-infoleak.py  test-rtcnst.py  test-unused.py
tests/unused0/: README.md
vanguard/aleo/: abstract.py  common-old0.py  common.py  grammar-old0.py  grammar.py  graphs.py  instruction_v0.lark  program-compatible-old0.lark  program-compatible.lark  program-r0.lark  program-r1.lark  program.lark  run.py  testing.py
vanguard/aleo2json/: Cargo.toml
(+296 files in other folders)
