[project]
name = "vanguard"
version = "0.0.1"
authors = [
  { name="Yanju Chen", email="yanju@veridise.com" },
]
description = "Static analysis for Aleo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://veridise.com/"