[project]
name = "vanguard"
version = "0.0.3"
authors = [
  { name="Yanju Chen", email="yanju@veridise.com" },
]
description = "Static analysis for Aleo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "networkx[default]>=3.2.1",
    "beautifulsoup4>=4.12.2",
    "antlr4-python3-runtime==4.13.1",
    "pandas>=2.1.4",
    "tabulate>=0.9.0",
    "antlr4-tools",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vanguard-aleo = "vanguard.aleo.run:run"